--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Rock, Paper, or Scissors?</h1>
+    <div class="buttonContainer">
+    <button id="rockbtn"><img src='./assets/cartoon-rock.png'/></button>
+    <button id="paperbtn"><img src='./assets/paperImage.png'/></button>
+    <button id="scissorsbtn"><img src='./assets/scissors.png'/></button>
+    </div>
+    <div>
+        <h3 id="scoreMessage">First to 5 points wins</h3>
+        <h4 id="scoreInfo">Make Your Selection</h4>
+        <div id="playerScore">Player: 0</div>
+        <div id="computerScore">Computer: 0</div>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
